# umai

./: .gitignore  .impeccable.md  .pre-commit-config.yaml  CLAUDE.md  DEPLOY.ko.md  DEPLOY.md  Makefile  README.ko.md  README.md  docker-compose.dev.yml  docker-compose.monitoring.yml  docker-compose.yml  skills-lock.json
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  main.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_workspace_knowledge.py  0003_celery_embeddings.py  0004_chat_members.py  0005_system_settings.py  0006_users_schema_v2.py  0007_oauth_unique_constraint.py  0008_message_rating.py  0009_missing_indexes.py  0010_jsonb_settings.py  0011_schema_constraints.py  0012_workflow_tables.py  0013_workflow_indexes.py  0014_pgvector_chunks.py  0015_optimize_hnsw.py  0016_missing_indexes.py  0017_message_composite_index.py
backend/app/core/: celery_app.py  config.py  constants.py  database.py  errors.py  http_headers.py  kafka.py  limiter.py  logging_config.py  middleware.py  model_registry.py  prompts.py  redis.py  redis_keys.py  security.py  telemetry.py
backend/app/models/: chat.py  fine_tune.py  settings.py  user.py  workflow.py  workspace.py
backend/app/routers/: admin.py  auth.py  chats.py  deps.py  fine_tune.py  folders.py  rag.py  tasks.py  workflows.py  workspace.py  ws.py
backend/app/schemas/: auth.py  chat.py
backend/app/services/: auth_service.py  chat_service.py  embedding_service.py  folder_service.py  hybrid_search.py  reranker.py  title_service.py  workspace_service.py
backend/app/tasks/: __init__.py  _utils.py  ai.py  chat.py  image.py  knowledge.py  workflow.py
backend/tests/: conftest.py  test_admin.py  test_auth.py  test_chats.py  test_fine_tune.py  test_folders.py  test_rag.py  test_rag_unit.py  test_settings_sections.py  test_tasks.py  test_workflows.py  test_workspace.py
docs/: 01-authentication.md  02-websocket.md  05-ai-agent.md  (+8 more)
(+120 files in other folders)
