[project]
name = "umai-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    # Web
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "uvloop>=0.19.0",
    "httptools>=0.6.0",
    "pydantic[email]>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-multipart>=0.0.9",

    # Database
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
    "alembic>=1.13.0",

    # Redis
    "redis[hiredis]>=5.0.0",

    # Task queue
    "celery[redis]>=5.4.0",
    "kombu>=5.3.0",

    # Auth / Security
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.0.0",
    "authlib>=1.3.0",
    "httpx>=0.27.0",
    "itsdangerous>=2.1.0",
    "slowapi>=0.1.9",

    # Image processing
    "pillow>=10.4.0",
    "numpy>=1.26.0",
    "rembg>=2.0.57",
    "onnxruntime>=1.18.0",
    "pymatting>=1.1.12",
    "scipy>=1.13.0",
    "scikit-image>=0.23.0",

    # Document processing
    "pymupdf>=1.24.0",
    "python-docx>=1.1.0",
    "tiktoken>=0.7.0",

    # AI / LLM SDK
    "openai>=1.40.0",
    "anthropic>=0.34.0",

    # Celery resilience
    "tenacity>=8.2.0",

    # Observability
    "prometheus-fastapi-instrumentator>=6.1.0",
    "python-json-logger>=2.0.7",
    "opentelemetry-sdk>=1.25.0",
    "opentelemetry-instrumentation-fastapi>=0.46b0",
    "opentelemetry-instrumentation-httpx>=0.46b0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.25.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-timeout>=2.1",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
]

[tool.uv]
package = false

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
addopts = "-v --tb=short"
